* Pressing a button that causes an interaction with the API will disable the button until a response is received. * Exceptions thrown by the Goal API will be reported back to the client and displayed. * The new goal and change layout buttons will no longer overlap over individual goals.

--- a/Financial_Planning_MVC/wwwroot/css/vuejs/goals.css
+++ b/Financial_Planning_MVC/wwwroot/css/vuejs/goals.css
@@ -7,14 +7,22 @@
     bottom: 0;
     display: flex;
     flex-direction: column;
-    margin: 0 1rem 1rem 0;
-    position: absolute;
+    justify-content: flex-end;
+    margin: 0 0.5rem 0.5rem 0;
+    position: sticky;
     right: 0;
 }
 
 .Goals.page-container .goals-page-header {
     background-color: #ededed;
     box-shadow: inset 0 0 5px 1px var(--box-shadow);
+    width: 100%;
+}
+
+.Goals.page-container .goals-page-body {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
     width: 100%;
 }
 
@@ -67,14 +75,22 @@
     background-color: var(--faint-white);
     border-radius: 0.5rem;
     box-shadow: 3px 3px 3px var(--box-shadow);
-    font-weight: bold;
+    font-size: 1.25rem;
     margin: 0.5rem;
     max-width: 50rem;
     text-align: center;
     width: 100%;
 }
 
+.Goals.page-container .goals-container .Goal input {
+    font-size: 1.25rem;
+    text-align: center;
+    width: 100%;
+}
+
+
 .Goals.page-container .goals-container .Goal .header {
+    min-height: 2rem;
     padding: 0.5rem 0.5rem 0 0.5rem;
 }
 
@@ -83,6 +99,10 @@
     text-align: center;
     width: 100%;
     word-break: break-word;
+}
+
+.Goals.page-container .goals-container .Goal .header .goal-name:empty:before {
+    content: attr(data-placeholder);
 }
 
 .Goals.page-container .goals-container .Goal .body {
@@ -113,7 +133,7 @@
 }
 
 .Goals.page-container .goals-container .Goal .body .label {
-    font-size: 1.25rem;
+    font-weight: bold;
     height: 1.25rem;
     margin: 0.5rem 0 0.5rem 0;
     text-align: center;
